Began 1.jpg/Restructured directory layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<script type="text/javascript" src="js/jquery.jcarousel.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/frame.css" />
 	<!-- <link rel="stylesheet" type="text/css" href="css2/style.css" /> -->
-	<link rel="stylesheet" type="text/css" href="css2/nivo-slider.css" />
-	<link rel="stylesheet" type="text/css" href="css2/default/default.css" />
+	<link rel="stylesheet" type="text/css" href="css/nivo-slider.css" />
+	<link rel="stylesheet" type="text/css" href="css/default/default.css" />
 	<title>	Some title</title>
 </head>
 <body>
@@ -25,9 +25,9 @@
 	</div>
 	<div id="main">
 		<div id="sidebar" style="overflow: hidden;">
-			<link href="css2/style_sidebar.css" rel="stylesheet" type="text/css" />
+			<link href="css/style_sidebar.css" rel="stylesheet" type="text/css" />
 			<script type="text/javascript" src="js/jquery.jcarousel.js"></script>
-			<link rel="stylesheet" type="text/css" href="css2/skin_sidebar.css" />
+			<link rel="stylesheet" type="text/css" href="css/skin_sidebar.css" />
 			<div id="wrap">
 				<ul id="mycarousel" class="jcarousel jcarousel-skin-tango">
 					<li><img src="images/1920x1024.jpg" width="75" height="75" alt="" /></li>
