Some progress with p1.html

--- a/p1.html
+++ b/p1.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/frame.css">
 	<link rel="stylesheet" type="text/css" href="css/960_12_col.css">
+	<link rel="stylesheet" type="text/css" href="css/artist-profile.css">
 	
 	<script type="text/javascript">
 	//Insert JavaScript here
@@ -26,11 +27,58 @@
 	    Sidebar
     </div>
     <div id='content'>
-    	<div class="wrap container_12" style="background: darkgray; border: 1px solid black; margin-top:10px;" >
-    		<div class="grid_3" style="background: blue">Grid 1</div>
-    		<div class="grid_3" style="background: blue">Grid 2</div>
-    		<div class="grid_3" style="background: blue">Grid 3</div>
-    		<!-- <div class="grid_2" style="background: blue">Grid 4</div> -->
+    	<div id="content-wrap">
+
+
+
+	    	<div class="wrap container_12" id="top">    		
+		    	<div class="grid_6 alpha">
+		    		<div class="grid_3 alpha">
+
+		    			<img src="images/profile.jpg" id="profilepic">
+
+		    		</div>
+
+		    		<div class="grid_3 omega">
+		    			<span id="dp_desc">
+
+		    				<h1>Artist Name</h1>
+		    				<h1>Artist</h1>
+		    				<h1>Location, State</h1>
+
+		    			</span>
+		    		</div>
+		    	</div>
+	    		<div class="grid_3">
+	    			<div id="topwrap">
+		    			<h1>Ratings</h1>
+
+		    			<img src="images/star-rating.png" id="gold" alt="Gold Ratings" style="width: 120px">
+		    			<img src="images/star-rating.png" id="silver" alt="Silver Ratings" style="width: 120px">
+
+		    			<div id="linkbox">
+		    				<div class="link" id="fb"></div>
+		    				<div class="link" id="youtube"></div>
+		    				<div class="link" id="google"></div>
+		    				<div class="link" id="twitter"></div>
+		    				<div class="link" id="reverbnation"></div>
+		    			</div>
+		    		</div>
+
+	    		</div>	    		
+	    	</div>
+	    	<div class="wrap container_12" id="middle">
+
+	    		<div class="grid_6">
+	    			<div id="aboutme">
+	    				About Me
+	    			</div>
+	    		</div>
+	    		<div class="grid_3">
+	    			Hoo
+	    		</div>
+
+	    	</div>
     	</div>	    
     </div>     
 </div>
