Some progress with p1.html

--- a/p1.html
+++ b/p1.html
@@ -74,8 +74,39 @@
 	    				About Me
 	    			</div>
 	    		</div>
-	    		<div class="grid_3">
-	    			Hoo
+	    		<div class="grid_3 omega" id="prevgig">
+
+	    			<ul>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+	    				<li>List item</li>
+
+	    			</ul>
+	    			
 	    		</div>
 
 	    	</div>
@@ -86,7 +117,7 @@
 <script type="text/javascript">
 	$footer=$('#footer');
 	$(document).ready(function(){
-		$('#top').height($('#content').height()-200);
+		$('#middle').height($('#content').height()-300);
 		$footer.on('click', function(){
 					// console.log('Footer clicked');
 					if($footer.css('height')=='30px'){
