--- a/p1.html
+++ b/p1.html
@@ -20,7 +20,7 @@
 			}
 		</style>
 
-	<script type="text/javascript" src="js/jquery.jscrollpane.min.js"></script>
+	<script type="text/javascript" src="js/jquery.jscrollpane.js"></script>
 	<script type="text/javascript" src="js/jquery.mousewheel.js"></script>
 	
 	<script type="text/javascript">
