--- a/p1.html
+++ b/p1.html
@@ -64,9 +64,36 @@
 		    		</div>
 		    	</div>
 	    		<div class="grid_3">
-	    			<div id="topwrap">
-		    			<h1>Ratings</h1>
+			<h1 style="text-align:right">Ratings</h1>
+					<!-- Rating! -->
 
+					<!--// plugin-specific resources //-->
+					<script src='js/jquery.MetaData.js' type="text/javascript" language="javascript"></script>
+					<script src='js/jquery.rating.pack.js' type="text/javascript" language="javascript"></script>
+					<link href='css/jquery.rating.css' type="text/css" rel="stylesheet"/>
+					<div class="Clear" style="float:right" >
+						<input class="star {split:4} required" type="radio" name="test-4-rating-5" value="1"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="2"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="3"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="4"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="5"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="6"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="7"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="8"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="9"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="10"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="11"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="12"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="13"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="14"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="15"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="16"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="17"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="18"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="19"/>
+						<input class="star {split:4}" type="radio" name="test-4-rating-5" value="20"/>
+					</div>     
+					<div id="topwrap">
 		    			<img src="images/star-rating.png" id="gold" alt="Gold Ratings" style="width: 120px">
 		    			<img src="images/star-rating.png" id="silver" alt="Silver Ratings" style="width: 120px">
 
@@ -127,7 +154,9 @@
     	</div>	    
     </div>     
 </div>
-<div id='footer'>Footer</div>
+<div id='footer'>Footer
+
+</div>
 <script type="text/javascript">
 	$footer=$('#footer');
 	$(document).ready(function(){
